--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hadron-command-registry",
   "description": "Atom's CommandRegistry extracted to a standalone module.",
   "version": "0.0.2",
-  "main": "hadron-command-registry.js",
+  "main": "index.js",
   "scripts": {
     "test": "electron-mocha --renderer",
     "ci": "npm test"
@@ -14,17 +14,14 @@
   },
   "dependencies": {
     "clear-cut": "^2.0.1",
-    "debug": "^2.2.0",
-    "event-kit": "^2.0.0"
+    "event-kit": "^2.0.0",
+    "underscore-plus": "^1.6.6"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-spies": "^0.7.1",
     "electron-mocha": "^1.0.2",
-    "electron-prebuilt": "^0.37.4",
-    "mocha": "^2.3.4",
-    "pre-commit": "^1.1.2"
+    "electron-prebuilt": "^0.37.4"
   },
-  "license": "Apache-2.0",
-  "precommit": [
-    "check"
-  ]
+  "license": "Apache-2.0"
 }
